--- a/css/hotelComparison.css
+++ b/css/hotelComparison.css
@@ -4,7 +4,7 @@
 #hotelInfo {
   text-indent: 2em;
   font-size: 11pt;
-  height: 1.5in
+  height: 1.45in;
 }
 
 table, td, th {
@@ -26,10 +26,11 @@ table, td, th {
   background-color: #EEEEEE;
   font-family: sans;
   border: 1pt solid #000000;
+  clear: right;
 }
 
 td {
-  height: 1.97in;
+  height: 1.9in;
   border: 1pt solid #000000;
   text-align: center;
 }
@@ -48,12 +49,18 @@ th {
   border: 1pt solid #000000;
 }
 
-.appLinkContainer {
-  width: 25%;
-  float: none;
+th > select {
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: center;
 }
 
-.legend {
+.appLinkContainer {
+  width: 25%;
+}
+
+.legendKey {
   width: 10pt;
   height: 10pt;
   display: inline-block;
@@ -73,15 +80,15 @@ th {
 
 @media screen and (max-width: 6in) {
   #hotelInfo {
-    height: 1.2in;
+    height: 1.25in;
+  }
+
+  #hotelInfo > p:first-child {
+    display: none;
   }
 
   td {
-    height: 1.67in;
-  }
-
-  td, th, #hotelInfo {
-    font-size: 8pt;
+    height: 1.7in;
   }
 }
 
@@ -91,11 +98,42 @@ th {
   }
   
   td {
-    height: 1.42in;
+    height: 1.4in;
   }
 
   .col3 {
     display: none;
   }
 }
-</style>
+
+@media screen and (max-width: 3.5in) {
+  .col2 {
+    display: none;
+  }
+
+  .appLinkContainer {
+    width: 33.3%
+  }
+
+  #tableContainer {
+    width: 66.6%;
+  }
+}
+
+@media screen and (max-width: 210px), (max-width: 2in) {
+  .appLinkContainer {
+    width: 50%
+  }
+
+  #tableContainer {
+    width: 50%;
+  }
+
+  #hotelInfo {
+    height: 0.8in;
+  }
+
+  td {
+    height: 1.25in;
+  }
+}
