--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -19,7 +19,7 @@
   }
 
   .appLinkContainer {
-    height: 1.6in;
+    height: 1.7in;
   }
 
   #container {
@@ -62,7 +62,7 @@
   }
   
   .appLinkContainer {
-    height: 1.35in;
+    height: 1.4in;
   }
 }
 
@@ -92,7 +92,7 @@
   }
 
   .appLinkContainer {
-    height: 90pt;
+    height: 1.25in;
   }
 
   #logo > img {
